# clio

./: .gitignore  Makefile  README.md  evaluate.py  main.py  mkdocs.insiders.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
clio/: config.py  pipeline.py  utils.py
clio/facets_extraction/: agent.py  facets.py  pipeline_builder.py
clio/schemas/: facet.py
configs/: config.yml
tests/: conftest.py  end_to_end.py  test_pipeline_builder.py
tests/configs/: hyperdrive_solutions_inc_config.yml
tests/configs/prompts/: mock_system_prompt.txt
tests/data/: hyperdrive_solutions_inc_conversations.json
tests/eval/: __init__.py  eval_facets_extraction.py  utils.py
tests/unit/: conftest.py  test_config.py  test_pipeline.py
tests/unit/facets_extraction/: test_agent.py  test_pipeline_builder.py
